    ExecutionContext, use getTool("ElasticSearch", Client.class)
  - Removed getKieContainer, getKieSession, and getStatelessKieSession
    methods from ExecutionContextFactory and ExecutionContext, use
    getTool("KIE", KieToolFactory.class) and use the corresponding
    methods there
  - See new feature notes under Tool Factory
- Caching
  - Ehcache has been removed
  - The org.moqui.context.Cache interface is replaced by javax.cache.Cache
  - Configuration options for caches changed (moqui-conf.cache-list.cache)
- Async Services
  - Now uses more standard java.util.concurrent interfaces
  - Removed ServiceCallAsync.maxRetry() - was never supported
  - Removed ServiceCallAsync.persist() - was never supported well, used to
    simply call through Quartz Scheduler when set
  - Removed persist option from XML Actions service-call.@async attribute
  - Async services never called through Quartz Scheduler (only scheduled)
  - ServiceCallAsync.callWaiter() replaced by callFuture()
  - Removed ServiceCallAsync.resultReceiver()
  - Removed ServiceResultReceiver interface - use callFuture() instead
  - Removed ServiceResultWaiter class - use callFuture() instead
  - See related new features below
- JCR and Apache Jackrabbit
  - The repository.@type, @location, and @conf-location attributes have
    been removed and the repository.parameter sub-element added for use
    with the javax.jcr.RepositoryFactory interface
  - See new configuration examples in MoquiDefaultConf.xml under the
    repository-list element
- OWASP ESAPI and AntiSamy
  - ESAPI removed, now using simple StringEscapeUtils from commons-lang
  - AntiSamy replaced by OWASP Java HTML Sanitizer
- Removed ServiceSemaphore entity, now using ServiceParameterSemaphore
- Deprecated methods
  - These methods were deprecated (usually by methods with shorter names)
    long ago and with other API changes now removing them
  - Removed getLocalizedMessage() and formatValue() from L10nFacade