@@ -16,5 +16,5 @@ package org.moqui.context;
 public interface NotificationMessageListener {
     void init(ExecutionContextFactory ecf);
     void destroy();
-    void onMessage(NotificationMessage nm, ExecutionContext ec);
+    void onMessage(NotificationMessage nm);
 }
