@@ -67,6 +67,8 @@ along with this software (see the LICENSE.md file). If not, see
                 The maximum size of the worker thread pool.</xs:documentation></xs:annotation></xs:attribute>
             <xs:attribute name="worker-pool-alive" type="xs:integer"><xs:annotation><xs:documentation>
                 The amount of time, in seconds, to keep idle worker threads alive (beyond core pool size).</xs:documentation></xs:annotation></xs:attribute>
+            <xs:attribute name="notification-topic-factory" type="xs:string"><xs:annotation><xs:documentation>
+                The ToolFactory to use to get a SimpleTopic for distributed NotificationMessage</xs:documentation></xs:annotation></xs:attribute>
         </xs:complexType>
     </xs:element>
     <xs:element name="tool-factory">
